The option "show_abbrevs" supersedes the former print mode
"no_abbrevs" with inverted meaning.

* More systematic naming of some configuration options.
INCOMPATIBILTY.

  trace_simp  ~>  simp_trace
  debug_simp  ~>  simp_debug

* Support for real valued configuration options, using simplistic
floating-point notation that coincides with the inner syntax for
float_token.


*** Pure ***

* Command 'notepad' replaces former 'example_proof' for
experimentation in Isar without any result.  INCOMPATIBILITY.

* Support for real valued preferences (with approximative PGIP type).

* Interpretation command 'interpret' accepts a list of equations like
'interpretation' does.

* Diagnostic command 'print_interps' prints interpretations in proofs
in addition to interpretations in theories.

* Discontinued obsolete 'global' and 'local' commands to manipulate
the theory name space.  Rare INCOMPATIBILITY.  The ML functions
Sign.root_path and Sign.local_path may be applied directly where this
feature is still required for historical reasons.

* Discontinued obsolete 'constdefs' command.  INCOMPATIBILITY, use
'definition' instead.

* Document antiquotations @{class} and @{type} print classes and type
constructors.

* Document antiquotation @{file} checks file/directory entries within
the local file system.


*** HOL ***

* More canonical naming convention for some fundamental definitions:

    bot_bool_eq ~> bot_bool_def
    top_bool_eq ~> top_bool_def
    inf_bool_eq ~> inf_bool_def
    sup_bool_eq ~> sup_bool_def
    bot_fun_eq ~> bot_fun_def
    top_fun_eq ~> top_fun_def
    inf_fun_eq ~> inf_fun_def
    sup_fun_eq ~> sup_fun_def

* Quickcheck now by default uses exhaustive testing instead of random
testing.  Random testing can be invoked by quickcheck[random],
exhaustive testing by quickcheck[exhaustive].

* Quickcheck instantiates polymorphic types with small finite
datatypes by default. This enables a simple execution mechanism to